
SUBDIRS = \
	debian.org \
	fedoraproject.org \
	$(NULL)

databasedir = $(pkgdatadir)/db/install-scripts/
database_DATA =     \
  rhel.xml          \
  ubuntu.xml        \
  windows-sif.xml   \
  windows-cmd.xml   \
  windows-reg.xml   \
  windows-unattend.xml \
  $(NULL)

EXTRA_DIST = $(database_DATA)
