
SUBDIRS = \
	pci-1000-0012.d \
	pci-1013-00b8.d \
	pci-1022-2000.d \
	pci-10ec-8029.d \
	pci-10ec-8139.d \
	pci-1234-1111.d \
	pci-1274-5000.d \
	pci-15ad-0710.d \
	pci-1af4-1000.d \
	pci-1af4-1001.d \
	pci-1af4-1002.d \
	pci-1af4-1003.d \
	pci-1af4-1009.d \
	pci-1b36-0100.d \
	pci-8086-100e.d \
	pci-8086-2415.d \
	pci-8086-25ab.d \
	pci-8086-2668.d \
	$(NULL)

include ../../Makefile.inc
